<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/graylight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@drawable/gradient" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".activities.AddActivity">

                <ImageView
                    android:id="@+id/close_btn_addfragment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="12dp"
                    android:src="@drawable/ic_close" />


                <ImageView
                    android:id="@+id/meal_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="30dp"
                    android:src="@drawable/ic_imageview" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/shapebutton"
                    android:orientation="vertical"
                    tools:context=".activities.AddActivity">

                    <Spinner
                        android:id="@+id/spinner"
                        style="@android:style/Widget.Material.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginBottom="10dp"
                        android:padding="10dp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/et_eatname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shapeedittext"
                    android:hint="@string/name"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHighlight="@color/colorWhite"
                    android:textColorHint="@color/colorWhiteDark"
                    android:textSize="@dimen/def_medium_text_size" />

                <EditText
                    android:id="@+id/et_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shapeedittext"
                    android:hint="@string/description"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHighlight="@color/colorWhite"
                    android:textColorHint="@color/colorWhiteDark"
                    android:textSize="@dimen/def_medium_text_size" />

                <EditText
                    android:id="@+id/et_steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/shapeedittext"
                    android:hint="@string/steps"
                    android:padding="5dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHighlight="@color/colorWhite"
                    android:textColorHint="@color/colorWhiteDark"
                    android:textSize="@dimen/def_medium_text_size" />


                <TextView
                    android:id="@+id/textview_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/_0_0"
                    android:textColor="@color/colorWhiteDark"
                    android:textSize="25sp" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:outlineAmbientShadowColor="@color/colorAccent" />

                <Button
                    android:id="@+id/upload_butn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/progress_bar"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="62dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/shapebutton"
                    android:text="@string/upload"
                    android:textAllCaps="false"
                    android:textSize="@dimen/def_medium_text_size" />


            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>