<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/titleCategory"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="50dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/breackfastLayoutClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorCardView"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:padding="5dp"
                        android:src="@drawable/breakfast" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/breakfast"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/def_small1_text_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/lunchLayoutClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorCardView"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:padding="5dp"
                        android:src="@drawable/lunch" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/lunch"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/def_small1_text_size"
                        android:textStyle="bold" />

                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dinnerLayoutClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorCardView"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:padding="5dp"
                        android:src="@drawable/dinner" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/dinner"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/def_small1_text_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/favoritesLayoutClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorCardView"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:padding="5dp"
                        android:src="@drawable/favorites" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/favorites"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/def_small1_text_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/juicesLayoutClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorCardView"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:padding="5dp"
                        android:src="@drawable/juice" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/juices"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/def_small1_text_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dessertsLayoutClick"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/colorCardView"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:padding="5dp"
                        android:src="@drawable/dessert" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:gravity="center"
                        android:text="@string/desserts"
                        android:textColor="@color/colorPrimaryText"
                        android:textSize="@dimen/def_small1_text_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>