<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.HomeBaseActivity">

    <include
        android:id="@+id/toolBartest"
        layout="@layout/activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolBartest">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/activity_home_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:orientation="vertical">


                    <FrameLayout
                        android:id="@+id/search_fragment_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">


                        <androidx.core.widget.NestedScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="bottom"
                            android:background="@color/graylight"
                            android:fillViewport="true"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior">


                            <RelativeLayout
                                android:id="@+id/fragment_home_layout"
                                android:layout_width="match_parent"
                                android:layout_height="300dp"
                                android:orientation="vertical">


                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="210dp"
                                    android:background="@drawable/background_1" />

                                <TextView
                                    android:id="@+id/login_txt_btn"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_alignParentEnd="true"
                                    android:layout_marginStart="250dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginEnd="12dp"
                                    android:layout_marginBottom="150dp"
                                    android:gravity="right"
                                    android:text="@string/login_signup"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="15sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/titleCategory"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/login_txt_btn"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginRight="16dp"
                                    android:text="@string/meal_categories"
                                    android:textColor="@color/colorPrimaryText"
                                    android:textSize="19sp"
                                    android:textStyle="bold" />


                                <include
                                    android:id="@+id/shimmerCategory"
                                    layout="@layout/item_recycler_category_shimmer" />

                                <TextView
                                    android:id="@+id/TV_add_new_meal"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/shimmerCategory"
                                    android:layout_marginLeft="20dp"
                                    android:layout_marginRight="20dp"
                                    android:background="@drawable/shapebutton"
                                    android:gravity="center"
                                    android:padding="10dp"
                                    android:text="@string/add_new_meal"
                                    android:textColor="@color/colorPrimaryText" />

                                <TextView
                                    android:id="@+id/hanakolehTextView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/TV_add_new_meal"
                                    android:layout_marginLeft="20dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginRight="20dp"
                                    android:background="@drawable/shapebutton"
                                    android:gravity="center"
                                    android:padding="10dp"
                                    android:text="@string/app_name"
                                    android:textColor="@color/colorPrimaryText" />

                            </RelativeLayout>
                        </androidx.core.widget.NestedScrollView>
                    </FrameLayout>
                </LinearLayout>

            </FrameLayout>
        </RelativeLayout>

        <include
            android:id="@+id/drawer"
            layout="@layout/side_menu_layout"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="start" />
    </androidx.drawerlayout.widget.DrawerLayout>
</RelativeLayout>